# sentino-api-client

./: .gitignore  PUBLIC_REPO.md  README.md  demo_notebook.ipynb  demo_test.py  pyproject.toml  test_basic.py
docs/: conf.py  index.rst  requirements.txt
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/sentino_api/: client.html
sentino_api/: __init__.py  client.py  demo_data.py
tests/: test_client.py
