[tool.poetry]
name = "sentino-api"
version = "0.1.0"
description = "Python client for Sentino Personality API - analyze Big Five and other personality traits from text"
authors = ["Yifan-Zang <yz4870@columbia.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Yifan-Zang/sentino-api"
repository = "https://github.com/Yifan-Zang/sentino-api"
keywords = ["personality", "psychology", "api", "big-five", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
pandas = "^2.3.3"
matplotlib = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
jupyter = "^1.1.1"
pytest-cov = "^7.0.0"
sphinx = ">=8,<9"
sphinx-rtd-theme = "^3.0.2"

